timer is working, functionally and aesthetically.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="timer-card">
         
         <div class="image-display">
-          <img src="plant.png" alt="Pixel plant" id="plant-img">
+          <img src="images/plant_stages/plant1.png" alt="Pixel plant" id="plant-img">
         </div>
 
         <div id="time-display">25:00</div>
@@ -24,21 +24,21 @@
           
           <div class="control-item">
             <button id="btn-reset" class="circle-btn">
-              <img src="plant_icons/Refresh ccw.svg" alt="Reset button" id="reset-img">
+              <img src="images/icons/Refresh ccw.svg" alt="Reset button" id="reset-img">
             </button>
             <span class="label">reset</span>
           </div>
 
           <div class="control-item">
             <button id="btn-start" class="circle-btn">
-              <img src="plant_icons/Polygon 1.svg" alt="Start button" id="start-img">
+              <img src="images/icons/Polygon 1.svg" alt="Start button" id="start-img">
             </button>
             <span class="label">start</span>
           </div>
 
           <div class="control-item">
             <button id="btn-pause" class="circle-btn">
-              <img src="plant_icons/Group 1.svg" alt="Pause button" id="pause-img">
+              <img src="images/icons/Group 1.svg" alt="Pause button" id="pause-img">
             </button>
             <span class="label">pause</span>
           </div>
@@ -47,6 +47,6 @@
       </div>
     </div>
 
-    <script src="renderer.js"></script>
+    <script defer="defer" src="renderer.js"></script>
   </body>
 </html>
