--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Tektur:wdth,wght@77.7,400..900&family=Tiny5&display=swap" rel="stylesheet">
-
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wdth,wght@87.5,300..700&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">  </head>
   <body>
-    
     <div class="app">
       <div class="timer-card">
         <div class="image-wrapper">
